--- a/src/app.json
+++ b/src/app.json
@@ -26,7 +26,9 @@
     "pages/goods/main",
     "pages/shoppingCart/main",
     "pages/orderPre/main",
-    "pages/goodsDetail/main"
+    "pages/goodsDetail/main",
+    "pages/orderCode/main",
+    "pages/detail/main"
   ],
   "tabBar": {
     "color": "#959394",
